Добавлена авторизация админа.

--- a/InternetShop/InternetShop.csproj
+++ b/InternetShop/InternetShop.csproj
@@ -238,8 +238,9 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Auth.cshtml" />
-    <Content Include="Views\Home\Admin.cshtml" />
+    <Content Include="Views\Home\Orders.cshtml" />
     <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
+    <Content Include="Views\Home\Goods.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
