--- a/InternetShop/InternetShop.csproj
+++ b/InternetShop/InternetShop.csproj
@@ -241,6 +241,8 @@
     <Content Include="Views\Home\Orders.cshtml" />
     <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
     <Content Include="Views\Home\Goods.cshtml" />
+    <Content Include="Views\Home\Select.cshtml" />
+    <Content Include="Views\Home\Success.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
