--- a/InternetShop/InternetShop.csproj
+++ b/InternetShop/InternetShop.csproj
@@ -149,6 +149,10 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Cart.cs" />
+    <Compile Include="CartIndexViewModel.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -234,15 +238,17 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Auth.cshtml" />
-    <Content Include="Views\Home\Orders.cshtml" />
+    <Content Include="Views\Admin\Orders.cshtml" />
     <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
-    <Content Include="Views\Home\Goods.cshtml" />
+    <Content Include="Views\Admin\Goods.cshtml" />
+    <Content Include="Views\Admin\Select.cshtml" />
+    <Content Include="Views\Admin\Success.cshtml" />
     <Content Include="Views\Home\Select.cshtml" />
-    <Content Include="Views\Home\Success.cshtml" />
+    <Content Include="Views\Home\Cart.cshtml" />
+    <Content Include="Views\Cart\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
