--- a/InternetShop/InternetShop.csproj
+++ b/InternetShop/InternetShop.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="IOrderProcessor.cs" />
     <Compile Include="Models\Good.cs">
       <DependentUpon>ShopDB.tt</DependentUpon>
     </Compile>
@@ -182,6 +183,7 @@
       <DependentUpon>ShopDB.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShippingDetails.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Shop.mdf" />
@@ -249,6 +251,8 @@
     <Content Include="Views\Home\Select.cshtml" />
     <Content Include="Views\Home\Cart.cshtml" />
     <Content Include="Views\Cart\Index.cshtml" />
+    <Content Include="Views\Cart\Checkout.cshtml" />
+    <Content Include="Views\Cart\MakeOrder.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
